unpackaged/main/default/objects/Record_Assignment__c/Record_Assignment__c.object-meta.xml
<CustomObject>
    <label>Record Assignment</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Record Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>