unpackaged/main/default/objects/Record_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Record Assignments</relationshipLabel>
    <relationshipName>Record_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>