unpackaged/main/default/objects/Record_Assignment__c/fields/Assigned_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_Name__c</fullName>
    <formula>Distribution_User__r.User__r.FirstName + Distribution_User__r.User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned User Name</label>
    <type>Text</type>
</CustomField>