unpackaged/main/default/objects/Record_Assignment__c/fields/Distribution_Routing_Definition__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Routing_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Routing Definition</label>
    <referenceTo>Distribution_Routing_Definition__c</referenceTo>
    <relationshipLabel>Record Assignments</relationshipLabel>
    <relationshipName>Record_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>