unpackaged/main/default/objects/Record_Assignment__c/fields/Excluded_from_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Excluded_from_Total_Count__c</fullName>
    <description>used in record distribution flow pd-553</description>
    <formula>Distribution_Routing_Definition__r.Exclude_From_Total_Count__c</formula>
    <inlineHelpText>formula referencing same field on routing definition</inlineHelpText>
    <label>Excluded from Total Count</label>
    <type>Checkbox</type>
</CustomField>