unpackaged/main/default/objects/Record_Assignment__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <description>First and Last name of the input record that initiated the distribution process</description>
    <label>Lead Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>