unpackaged/main/default/objects/Record_Assignment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Record Assignments</relationshipLabel>
    <relationshipName>Record_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>