unpackaged/main/default/objects/Record_Assignment__c/fields/Original_Distribution_Routing_Definition__c.field-meta.xml
<CustomField>
    <fullName>Original_Distribution_Routing_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the originally matched routing definition.</description>
    <label>Original Distribution Routing Definition</label>
    <referenceTo>Distribution_Routing_Definition__c</referenceTo>
    <relationshipLabel>Record Assignments (Original Distribution Routing Definition)</relationshipLabel>
    <relationshipName>Record_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>