unpackaged/main/default/objects/Record_Assignment__c/fields/Record_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Record_Assignment_Status__c</fullName>
    <description>used in Record Distribution Process flow PD-2552</description>
    <label>Record Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>