unpackaged/main/default/objects/Record_Assignment__c/fields/Routing_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Routing_Definition_Name__c</fullName>
    <formula>Distribution_Skill__r.Distribution_Routing_Definition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Routing Definition Name</label>
    <type>Text</type>
</CustomField>